--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ input[type="text"]{
 .List{
     height: 500px;
     overflow: scroll;
+	
 }
 
 .container .todo_list{
@@ -110,6 +111,7 @@ input[type="text"]{
     background-size: 30px;
     background-position: center;
     background-repeat: no-repeat;
+    overflow:hidden;
 }
 .container .todo_list button{
     border: none;
